1.8.0 released (13 Aug 2010) by Willis
Fully updated to Vim 7.3.

1.7.0 released (23 Dec 2008) by Willis
Fully updated to Vim 7.2. This release also adds an optional plugin that
automatically sets the default help language to Chinese, so that you don't
have to do it by yourself in vimrc.
Note that this plugin also modifies the default encoding to utf-8. Please
read the HOWTO page for more details.
<br>
This release also contains a unicode build of the win32 installation program.

1.6.0 released (17 Sep 2007) by Willis
Up-to-date with the latest upstream release Vim 7.1. Also included various
bugfixes. Thanks to everyone for making this happen!

Maintainer change (23 July 2007) by lang2
lang2 is stepping down fromt the maintainer's role and yianwillis will take
over. 

1.5.0 released! (18 Aug 2006) by lang2
A big move and we have a completely new release. Thanks to the hard
work of tocer and Willis, all documentation files are NOW fully
up-to-date with 7.0, including 13 new help files. Online HTML is going
to be updated soon.
There will be no separate releases for old vim versions. You are all
encouraged to use the poweful new Vim7 anyway:) Happy vimming!

New release expected soon! (07 Aug 2006) by Willis
Stay tuned.

Version 1.0 released! Also preview release for Vim7! (23 Jun 2006) by Willis
We have completed all documentations for Vim 6.4! Various reviews have been
made since 0.9.0 and we are very happy to announce our first 1.x release for
vim 6.4!
<br><br>
In the meantime, many new exciting features have been added since Vim 7.0 
has been released early May. We are actively working on new Vim 7 help files 
and in our first preview release, we already have 60 out of 128 files up-to-date.
Welcome to try it out!
<br><br>
Online HTML versions are also updated for both 6.4 and 7.0 releases. 

0.9.0 released! (19 Mar 2006) by lang2
This is a major milestone release! All Vim documentation are now translated